--- a/sytle.css
+++ b/sytle.css
@@ -96,6 +96,7 @@ div {
   background-color: #ffbdae;
   color: rgb(12, 11, 29);
   font-weight: 800;
+  box-shadow: 3px 2px 2px;
 }
 
 .btn-container {
